# image_cropping

./: CMakeLists.txt  README.md  package.xml
action/: image_crop.action
description/: crop_param.yaml
include/image_cropping/: client_node.h  server_node.h
launch/: image_cropping.launch
src/: client_node.cpp  server_node.cpp
srv/: image_crop_srv.srv
